--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,8 +19,15 @@ body {
     color: white;
     height: 30%;
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
+    justify-content: space-between;
     font-size: 40px;
+    align-items: center;
+}
+#logo {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
     align-items: center;
 }
 #img {
@@ -78,19 +85,23 @@ body {
     width: 100%;
     background-color: lightgray;
 }
-#inbox:hover {
-    background-color: rgb(229, 229, 229);
-    cursor: pointer;
+#add-task {
+    width: 48px;
+    text-align: center;
+    border-radius: 0.5rem;
+    background-color: darkcyan;
+    color: white;
+    font-size: 38px;
+    font-family: 'titleFont';
+    font-weight: 100;
+    border: none;
+    margin-right: 2rem;
 }
-#today:hover {
-    background-color: rgb(229, 229, 229);
+#add-task:hover {
     cursor: pointer;
-}   
-#this-week:hover {
-    background-color: rgb(229, 229, 229);
-    cursor: pointer;
+    background-color: rgb(19, 185, 185);
 }
-#add-project:hover {
+#inbox:hover, #today:hover, #this-week:hover, #add-project:hover   {
     background-color: rgb(229, 229, 229);
     cursor: pointer;
 }
@@ -102,4 +113,20 @@ body {
     background-color: white;
     width: 70%;
     height: 100%;
+}
+.form-popup {
+    position: fixed;
+    bottom: 50%;
+    right: 50%;
+    left: 50%;
+    top: 50%;
+}
+#form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+}
+#form-container input[type=text]:focus {
+    background-color: rgb(174, 235, 244);
+    outline: none;
 }
