--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -160,7 +160,7 @@ input[type=text] {
 }
 #submitButton, #close-form {
     font-family: "titleFont";
-    width: 20%;
+    width: 30%;
     height: 2rem;
     font-size: 1rem;
     font-weight: bolder;
@@ -175,7 +175,7 @@ input[type=text] {
     font-size: 1.5rem;
 }
 
-#title-container, #description-container, #priority-container, #projects-container, #submit-container {
+#title-container, #description-container, #priority-container, #projects-container, #submit-container, #close-container {
     font-family: 'titleFont';
     display: flex;
     flex-direction: column;
